kubernetes/namespaces/tooling/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: tooling
spec:
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
